using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading;
using System.Threading.Tasks;
using Baketa.Core.Abstractions.Translation;
using Baketa.Core.Translation.Models;
using Microsoft.Extensions.Logging;

namespace Baketa.Infrastructure.Translation.Adapters;

/// <summary>
/// gRPCç¿»è¨³ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‚’ITranslationEngineã‚¤ãƒ³ã‚¿ãƒ¼ãƒ•ã‚§ãƒ¼ã‚¹ã«é©åˆã•ã›ã‚‹Adapter
/// Phase 3.1: OptimizedPythonTranslationEngineå‰Šé™¤ - ã‚·ãƒ³ãƒ—ãƒ«ãªAdapterå®Ÿè£…
///
/// è²¬å‹™:
/// - ITranslationClientã‚’ITranslationEngineã‚¤ãƒ³ã‚¿ãƒ¼ãƒ•ã‚§ãƒ¼ã‚¹ã§ãƒ©ãƒƒãƒ—
/// - ãƒãƒƒãƒç¿»è¨³ã®ä¸¦è¡Œå®Ÿè¡Œåˆ¶å¾¡
/// - è¨€èªãƒšã‚¢ã‚µãƒãƒ¼ãƒˆç¢ºèª
/// </summary>
public sealed class GrpcTranslationEngineAdapter : ITranslationEngine
{
    private readonly ITranslationClient _client;
    private readonly ILogger<GrpcTranslationEngineAdapter> _logger;
    private readonly IReadOnlyList<LanguagePair> _supportedLanguagePairs;
    private bool _disposed;

    /// <summary>
    /// NLLB-200ãŒã‚µãƒãƒ¼ãƒˆã™ã‚‹ä¸»è¦è¨€èªãƒšã‚¢ï¼ˆæ—¥è‹±ç¿»è¨³ç‰¹åŒ–ï¼‰
    /// </summary>
    private static readonly IReadOnlyList<LanguagePair> DefaultSupportedLanguagePairs = new List<LanguagePair>
    {
        new() { SourceLanguage = Language.Japanese, TargetLanguage = Language.English },
        new() { SourceLanguage = Language.English, TargetLanguage = Language.Japanese },
        new() { SourceLanguage = Language.Japanese, TargetLanguage = Language.ChineseSimplified },
        new() { SourceLanguage = Language.ChineseSimplified, TargetLanguage = Language.Japanese },
        new() { SourceLanguage = Language.Japanese, TargetLanguage = Language.Korean },
        new() { SourceLanguage = Language.Korean, TargetLanguage = Language.Japanese },
        new() { SourceLanguage = Language.English, TargetLanguage = Language.ChineseSimplified },
        new() { SourceLanguage = Language.ChineseSimplified, TargetLanguage = Language.English },
        new() { SourceLanguage = Language.English, TargetLanguage = Language.Korean },
        new() { SourceLanguage = Language.Korean, TargetLanguage = Language.English }
    }.AsReadOnly();

    /// <summary>
    /// ã‚³ãƒ³ã‚¹ãƒˆãƒ©ã‚¯ã‚¿
    /// </summary>
    /// <param name="client">gRPCç¿»è¨³ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆ</param>
    /// <param name="logger">ãƒ­ã‚¬ãƒ¼</param>
    /// <param name="supportedLanguagePairs">ã‚µãƒãƒ¼ãƒˆè¨€èªãƒšã‚¢ï¼ˆnullã®å ´åˆã¯ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆï¼‰</param>
    public GrpcTranslationEngineAdapter(
        ITranslationClient client,
        ILogger<GrpcTranslationEngineAdapter> logger,
        IReadOnlyList<LanguagePair>? supportedLanguagePairs = null)
    {
        _client = client ?? throw new ArgumentNullException(nameof(client));
        _logger = logger ?? throw new ArgumentNullException(nameof(logger));
        _supportedLanguagePairs = supportedLanguagePairs ?? DefaultSupportedLanguagePairs;

        _logger.LogInformation(
            "GrpcTranslationEngineAdapter initialized: Mode={CommunicationMode}, SupportedPairs={Count}",
            _client.CommunicationMode,
            _supportedLanguagePairs.Count
        );
    }

    /// <inheritdoc/>
    public string Name => "gRPC Translation Engine";

    /// <inheritdoc/>
    public string Description => "gRPC-based Python translation server (NLLB-200)";

    /// <inheritdoc/>
    public bool RequiresNetwork => true;

    /// <inheritdoc/>
    public Task<IReadOnlyCollection<LanguagePair>> GetSupportedLanguagePairsAsync()
    {
        ObjectDisposedException.ThrowIf(_disposed, this);

        IReadOnlyCollection<LanguagePair> result = _supportedLanguagePairs.ToList().AsReadOnly();
        return Task.FromResult(result);
    }

    /// <inheritdoc/>
    public Task<bool> SupportsLanguagePairAsync(LanguagePair languagePair)
    {
        ObjectDisposedException.ThrowIf(_disposed, this);
        ArgumentNullException.ThrowIfNull(languagePair);

        var isSupported = _supportedLanguagePairs.Any(pair =>
            pair.SourceLanguage.Code.Equals(languagePair.SourceLanguage.Code, StringComparison.OrdinalIgnoreCase) &&
            pair.TargetLanguage.Code.Equals(languagePair.TargetLanguage.Code, StringComparison.OrdinalIgnoreCase)
        );

        return Task.FromResult(isSupported);
    }

    /// <inheritdoc/>
    public async Task<TranslationResponse> TranslateAsync(
        TranslationRequest request,
        CancellationToken cancellationToken = default)
    {
        ObjectDisposedException.ThrowIf(_disposed, this);
        ArgumentNullException.ThrowIfNull(request);

        try
        {
            // ITranslationClient.TranslateAsyncã‚’ç›´æ¥å‘¼ã³å‡ºã—
            var response = await _client.TranslateAsync(request, cancellationToken).ConfigureAwait(false);
            return response;
        }
        catch (Exception ex)
        {
            _logger.LogError(
                ex,
                "[GrpcAdapter] Translation failed: {SourceLang} -> {TargetLang}",
                request.SourceLanguage.Code,
                request.TargetLanguage.Code
            );

            return TranslationResponse.CreateErrorFromException(
                request,
                Name,
                "ADAPTER_ERROR",
                $"gRPC translation failed: {ex.Message}",
                ex
            );
        }
    }

    /// <inheritdoc/>
    public async Task<IReadOnlyList<TranslationResponse>> TranslateBatchAsync(
        IReadOnlyList<TranslationRequest> requests,
        CancellationToken cancellationToken = default)
    {
        ObjectDisposedException.ThrowIf(_disposed, this);
        ArgumentNullException.ThrowIfNull(requests);

        if (requests.Count == 0)
        {
            return Array.Empty<TranslationResponse>();
        }

        _logger.LogDebug("[GrpcAdapter] Batch translation: {Count} requests", requests.Count);

        try
        {
            // ğŸ”§ [PHASE3.1] å„ãƒªã‚¯ã‚¨ã‚¹ãƒˆã‚’ä¸¦è¡Œå®Ÿè¡Œï¼ˆTask.WhenAllï¼‰
            // Note: GrpcTranslationClientã«TranslateBatchAsyncãƒ¡ã‚½ãƒƒãƒ‰ãŒå®Ÿè£…ã•ã‚ŒãŸã‚‰åˆ‡ã‚Šæ›¿ãˆ
            var tasks = requests.Select(request => TranslateAsync(request, cancellationToken));
            var responses = await Task.WhenAll(tasks).ConfigureAwait(false);

            _logger.LogDebug(
                "[GrpcAdapter] Batch translation completed: {SuccessCount}/{TotalCount} successful",
                responses.Count(r => r.IsSuccess),
                responses.Length
            );

            return responses;
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "[GrpcAdapter] Batch translation failed: {Count} requests", requests.Count);

            // ã‚¨ãƒ©ãƒ¼æ™‚ã¯å„ãƒªã‚¯ã‚¨ã‚¹ãƒˆã«å¯¾ã—ã¦ã‚¨ãƒ©ãƒ¼ãƒ¬ã‚¹ãƒãƒ³ã‚¹ã‚’è¿”ã™
            return requests.Select(request =>
                TranslationResponse.CreateErrorFromException(
                    request,
                    Name,
                    "BATCH_ERROR",
                    $"Batch translation failed: {ex.Message}",
                    ex
                )
            ).ToList();
        }
    }

    /// <inheritdoc/>
    public async Task<bool> IsReadyAsync()
    {
        ObjectDisposedException.ThrowIf(_disposed, this);

        try
        {
            return await _client.IsReadyAsync(CancellationToken.None).ConfigureAwait(false);
        }
        catch (Exception ex)
        {
            _logger.LogWarning(ex, "[GrpcAdapter] IsReady check failed");
            return false;
        }
    }

    /// <inheritdoc/>
    public async Task<bool> InitializeAsync()
    {
        ObjectDisposedException.ThrowIf(_disposed, this);

        try
        {
            _logger.LogInformation("[GrpcAdapter] Initializing gRPC translation engine");

            // ãƒ˜ãƒ«ã‚¹ãƒã‚§ãƒƒã‚¯ã§åˆæœŸåŒ–ç¢ºèª
            var isHealthy = await _client.HealthCheckAsync(CancellationToken.None).ConfigureAwait(false);

            if (isHealthy)
            {
                _logger.LogInformation("[GrpcAdapter] gRPC translation engine initialized successfully");
                return true;
            }

            _logger.LogWarning("[GrpcAdapter] gRPC translation engine health check failed");
            return false;
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "[GrpcAdapter] Initialization failed");
            return false;
        }
    }

    /// <inheritdoc/>
    public void Dispose()
    {
        if (_disposed)
        {
            return;
        }

        _logger.LogDebug("[GrpcAdapter] Disposing gRPC translation engine adapter");

        try
        {
            if (_client is IDisposable disposableClient)
            {
                disposableClient.Dispose();
            }
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "[GrpcAdapter] Error disposing client");
        }

        _disposed = true;
    }
}
